<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item-->
<!--        android:id="@+id/login_fragment"-->
<!--        android:icon="@drawable/baseline_home_24"-->
<!--        android:title="@string/bottom_nav_login"-->
<!--        />-->
    <item
        android:id="@+id/main_fragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/bottom_nav_main"
        />
    <item
        android:id="@+id/chat_fragment"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/bottom_nav_chat"
        />
    <item
        android:id="@+id/favorite_fragment"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/bottom_nav_favorite"
        />
    <item
        android:id="@+id/setting_fragment"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/bottom_nav_setting"
        />
</menu>