<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".main.add.AddSpaceFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_start"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="@dimen/guideline_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_add_end"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/guideline_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_add"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_add"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/toolbar_title_add"
        app:titleCentered="true"
        app:titleTextAppearance="@style/title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_map"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/medium_margin"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/gl_add_end"
        app:layout_constraintStart_toStartOf="@id/gl_add_start"
        app:layout_constraintTop_toBottomOf="@id/tb_add">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/add_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_add_end"
        app:layout_constraintStart_toStartOf="@id/gl_add_start"
        app:layout_constraintTop_toBottomOf="@+id/cv_add_map">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero_dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_marginTop="@dimen/medium_margin"
                android:hint = "@string/room_name"
                android:id="@+id/ed_add"
                android:focusable="auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_add_primary_image"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/primary_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_add" />

            <ImageButton
                android:background="@android:color/transparent"
                android:id="@+id/iv_add_primary_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/tiny_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_primary_image"
                android:contentDescription="@string/description_primary_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_add_additional_image"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/additional_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_add_primary_image" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_add_additional_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_add_additional_image"
                app:layout_constraintStart_toEndOf="@+id/iv_add_additional_image"
                app:layout_constraintTop_toBottomOf="@id/tv_add_additional_image" />
            <ImageButton
                android:background="@android:color/transparent"
                android:id="@+id/iv_add_additional_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="@dimen/tiny_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_additional_image"
                android:contentDescription="@string/description_additional_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_add_cond"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/cond_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_add_additional_image" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_add_cond"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_cond" >

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_add"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="70dp"
                    android:text="@string/add_chip"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_cond" />
            </com.google.android.material.chip.ChipGroup>



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_add_value"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                android:text="@string/month_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cg_add_cond" />

            <com.google.android.material.slider.Slider
                android:id="@+id/sl_add_value"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:stepSize="10"
                android:valueFrom="0"
                android:valueTo="200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_value" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_filter_space_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sl_add_value"
                style="@style/subTitle"
                android:text="@string/filter_space"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                app:singleSelection="true"
                android:id="@+id/tg_add_filter"
                android:layout_marginTop="@dimen/tiny_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_filter_space_name">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_filter_space_left"
                    style="?attr/materialButtonOutlinedStyle"
                    app:icon="@drawable/baseline_check_24"
                    app:iconPadding="@dimen/tiny_margin"
                    android:text="@string/apartment"
                    android:textAppearance="@style/filter"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MatchMate.Button.Rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    app:icon="@drawable/baseline_check_24"
                    app:iconPadding="@dimen/tiny_margin"
                    android:text="@string/office"
                    android:textAppearance="@style/filter"
                    android:id="@+id/btn_add_filter_space_mid"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.google.android.material.button.MaterialButton
                    app:icon="@drawable/baseline_check_24"
                    app:iconPadding="@dimen/tiny_margin"
                    android:text="@string/villa"
                    android:textAppearance="@style/filter"
                    android:id="@+id/btn_add_filter_space_right"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />



            </com.google.android.material.button.MaterialButtonToggleGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>