<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    tools:context=".main.detail.DetailFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_detail"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_detail"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/user"
        app:titleCentered="true"
        app:titleTextAppearance="@style/title"
        app:titleTextColor="?attr/colorOnSurface" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_detail_start"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="@dimen/guideline_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_detail_end"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/guideline_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_detail"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/viewpager_height"
        android:layout_marginTop="@dimen/medium_margin"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="@id/gl_detail_end"
        app:layout_constraintStart_toStartOf="@id/gl_detail_start"
        app:layout_constraintTop_toBottomOf="@id/tb_detail" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_detail_location"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="@id/gl_detail_start"
        app:layout_constraintTop_toBottomOf="@id/vp_detail" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_detail_location_user"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/example_address"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_detail_location"
        app:layout_constraintStart_toEndOf="@id/tv_detail_location" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_detail_value"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/value"
        app:layout_constraintStart_toStartOf="@id/gl_detail_start"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_location" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_detail_value_user"
        style="@style/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:text="@string/example_value"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_detail_value"
        app:layout_constraintStart_toEndOf="@id/tv_detail_location" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_detail_cond"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/detail_cond"
        app:layout_constraintEnd_toEndOf="@id/gl_detail_end"
        app:layout_constraintStart_toStartOf="@id/gl_detail_start"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_value" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_detail_cond"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/gl_detail_end"
        app:layout_constraintStart_toStartOf="@id/gl_detail_start"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_cond" />

</androidx.constraintlayout.widget.ConstraintLayout>