<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSmoke"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_login_start"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="@dimen/guideline_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_login_end"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/zero_dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/guideline_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_marginTop="@dimen/large_margin"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_login_btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_login_id"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:hint="@string/hint_id"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintTop_toBottomOf="@id/iv_login"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_id"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_login_password"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:hint="@string/hint_password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintTop_toBottomOf="@+id/tl_login_id"
        app:startIconDrawable="@drawable/baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_password"
            style="@style/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/auto_login"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintTop_toBottomOf="@id/tl_login_password"
        app:layout_constraintVertical_bias="0.058" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/login_btn"
        android:textStyle="bold"
        android:textColor="@color/primaryTextColor"
        android:backgroundTint="@color/lightPrimaryColor"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/gl_login_end"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintTop_toBottomOf="@id/checkBox_auto_login"
        tools:ignore="VisualLintButtonSize" />

    <ImageButton
        android:padding="12dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:id="@+id/btn_kakao_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/kakao_login_medium_wide"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/gl_login_end"
        app:layout_constraintStart_toStartOf="@+id/gl_login_start"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:contentDescription="@string/description_kakao_login" />

</androidx.constraintlayout.widget.ConstraintLayout>